# INJ-dapps

./: .gitignore  Dockerfile  README.md  cli-entrypoint.sh  entrypoint.sh
APP_MLLMs/contract_MLLM/: Cargo.toml
APP_MLLMs/contract_MLLM/.build-cache/registry/cache/index.crates.io-1949cf8c6b5b557f/: cosmwasm-schema-1.5.11.crate  cosmwasm-schema-derive-1.5.11.crate  cosmwasm-std-1.5.11.crate  cw2-1.1.2.crate  ff-0.13.1.crate  forward_ref-1.0.0.crate  libc-0.2.177.crate  serde-json-wasm-0.5.2.crate
APP_MLLMs/contract_MLLM/.build-cache/registry/src/index.crates.io-1949cf8c6b5b557f/bnum-0.10.0/: .cargo_vcs_info.json  Cargo.toml
APP_MLLMs/contract_MLLM/.build-cache/registry/src/index.crates.io-1949cf8c6b5b557f/cosmwasm-derive-1.5.11/: .cargo_vcs_info.json  Cargo.toml
APP_MLLMs/contract_MLLM/.build-cache/registry/src/index.crates.io-1949cf8c6b5b557f/cosmwasm-schema-1.5.11/: .cargo_vcs_info.json
APP_MLLMs/contract_MLLM/.build-cache/registry/src/index.crates.io-1949cf8c6b5b557f/cosmwasm-schema-derive-1.5.11/: .cargo_vcs_info.json  Cargo.toml
APP_MLLMs/contract_MLLM/.build-cache/registry/src/index.crates.io-1949cf8c6b5b557f/cosmwasm-std-1.5.11/: .cargo_vcs_info.json  Cargo.toml
APP_MLLMs/contract_MLLM/.build-cache/registry/src/index.crates.io-1949cf8c6b5b557f/cw-storage-plus-1.2.0/: Cargo.toml
APP_MLLMs/contract_MLLM/.build-cache/registry/src/index.crates.io-1949cf8c6b5b557f/cw2-1.1.2/: .cargo_vcs_info.json
APP_MLLMs/contract_MLLM/src/: lib.rs  msg.rs  state.rs
FOOD_APP/contract_FOOD/: Cargo.toml  shiyousho.md
FOOD_APP/contract_FOOD/artifacts/: checksums.txt  contract_FOOD.wasm  tabelog_review.wasm
FOOD_APP/contract_FOOD/src/: contract.rs  error.rs  execute.rs  lib.rs  msg.rs  query.rs  state.rs
(+134 files in other folders)
