[package]
name = "contract_food"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
library = []

[dependencies]
cosmwasm-std = "1.5"
cw2 = "1.1"
cw-storage-plus = "1.2"
serde = { version = "1.0", features = ["derive"] }
schemars = "0.8"
thiserror = "1.0"
